package org.example;
import java.util.List;

public class Alumno {

    private List<Materias> materiasAprobadas;

    public List<Materias> aprobadas(){
        return materiasAprobadas;
    }

}
